# duckdb-cron-extension

./: Cargo.toml  building.md  do-build.sh  readme.md
src/: lib.rs
